# GPR5100_EchoServer

./: CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  vcpkg.json
EchoClient/: CMakeLists.txt
EchoClient/src/: main.cpp
EchoServer/: CMakeLists.txt
EchoServer/src/: main.cpp
common/include/: Consts.h  Consts.hpp  Message.hpp
common/src/: Message.cpp
